# geospatial-store-siting

./: .gitignore  README.md  databricks.yml  pyproject.toml
app/: app.yaml  main.py  requirements.txt
app/static/: index.html
docs/: DATA_REFERENCE.md
notebooks/: 00_quality_checks.py  00_validate_schema.py  01_seed_demo_data.py  05_ingest_dev_signals.py  06_build_dev_signal_layer.py  07_ingest_osm_competitors.py  10_feature_engineering.py  11_train_model.py  12_deploy_endpoint.py  13_score_candidates.py  14_phase2_summary.py  _config.py
resources/: app.yml  phase1_demo_data.yml  phase1_osm_ingestion.yml  phase2_ml_pipeline.yml  phase3_dev_signals.yml
